@@ -110,6 +110,9 @@ static Location BrokenWP[]=
 #define CREATURE_DEFENDER           23216
 #define CREATURE_BROKEN             23319
 
+// Creature Entrys
+#define NPC_SHADE_OF_AKAMA          22841
+
 const uint32 spawnEntries[4]= { 23523, 23318, 23524 };
 
 class mob_ashtongue_channeler : public CreatureScript
@@ -626,6 +629,8 @@ public:
 
         void Reset()
         {
+            me->SetReactState(REACT_PASSIVE);
+
             DestructivePoisonTimer = 15000;
             LightningBoltTimer = 10000;
             CheckTimer = 2000;
@@ -665,6 +670,7 @@ public:
             {
                 instance->SetData(DATA_SHADEOFAKAMAEVENT, IN_PROGRESS);
                 // Prevent players from trying to restart event
+                me->SetReactState(REACT_DEFENSIVE);
                 me->RemoveFlag(UNIT_NPC_FLAGS, UNIT_NPC_FLAG_GOSSIP);
                 CAST_AI(boss_shade_of_akama::boss_shade_of_akamaAI, Shade->AI())->SetAkamaGUID(me->GetGUID());
                 CAST_AI(boss_shade_of_akama::boss_shade_of_akamaAI, Shade->AI())->SetSelectableChannelers();
@@ -758,6 +764,7 @@ public:
             {
                 if (instance)
                     instance->SetData(DATA_SHADEOFAKAMAEVENT, DONE);
+                me->SetReactState(REACT_PASSIVE);
                 me->GetMotionMaster()->MovePoint(WayPointId, AkamaWP[1].x, AkamaWP[1].y, AkamaWP[1].z);
                 ++WayPointId;
             }
